@@ -122,6 +122,7 @@ S3method(fitted, default)
 S3method(formula, data.frame)
 S3method(formula, default)
 S3method(formula, formula)
+S3method(formula, glm)
 S3method(formula, lm)
 S3method(formula, terms)
 S3method(frequency, default)
